--- a/html/About.html
+++ b/html/About.html
@@ -6,36 +6,38 @@
     <title>About - CakerieCafe Cupcake</title>
     <link rel="stylesheet" href="../css/Aboutcss.css"/>
 </head>
-<body class="image">
-    <div class="nav-container">
-        <img src="../assets/transparent-TO-logo.png" class="logo" alt="CakerieCafe Logo">
-        <nav class="list1">
-            <button class="item1"><a href="Home.html" class="h1">Home</a></button>
-            <button class="item1"><a href="About.html" class="h2">About</a></button>
-            <button class="item1"><a href="Occasions.html" class="h3">Occasions</a></button>
-            <button class="item1"><a href="Cupcakes.html" class="h4">Cupcakes</a></button>
-            <button class="item1"><a href="ViewCart.html" class="h5">View Cart</a></button>
-            <button class="item1"><a href="ContactUs.html" class="h6">Contact us</a></button>
-        </nav>
-        <nav class="list2">
-            <button class="item2">Search here</button>
-        </nav>
-    </div>
+<body>
+    <div class="main-content">
+        <div class="nav-container">
+            <img src="../assets/transparent-TO-logo.png" class="logo" alt="CakerieCafe Logo">
+            <nav class="list1">
+                <button class="item1"><a href="Home.html" class="h1">Home</a></button>
+                <button class="item1"><a href="About.html" class="h2">About</a></button>
+                <button class="item1"><a href="Occasions.html" class="h3">Occasions</a></button>
+                <button class="item1"><a href="Cupcakes.html" class="h4">Cupcakes</a></button>
+                <button class="item1"><a href="ViewCart.html" class="h5">View Cart</a></button>
+                <button class="item1"><a href="ContactUs.html" class="h6">Contact us</a></button>
+            </nav>
+            <nav class="list2">
+                <button class="item2">Search here</button>
+            </nav>
+        </div>
 
-<p><p class="topic"><b>About CakerieCafe Cupcake</b></p></p>
-<p class="content1">.<b>..............<br>
-    CakerieCafe Cupcake was opened in August 2021<br>
-    as one of Canada's first government cupcakeries.<br>
-    We are driven by loving what we do and what<br>
-    we make everyday. We get to use the finest<br>
-    ingredients to make what we believe are the<br>
-    tastiest treats around. And.. we love the<br>
-    idea that our treats are making people happy<br>
-    every time they bite into one. How much fun is that!
-    <br>
-    ...............</b>
-    
-</p>
+        <p><p class="topic"><b>About CakerieCafe Cupcake</b></p></p>
+        <p class="content1">.<b>..............<br>
+            CakerieCafe Cupcake was opened in August 2021<br>
+            as one of Canada's first government cupcakeries.<br>
+            We are driven by loving what we do and what<br>
+            we make everyday. We get to use the finest<br>
+            ingredients to make what we believe are the<br>
+            tastiest treats around. And.. we love the<br>
+            idea that our treats are making people happy<br>
+            every time they bite into one. How much fun is that!
+            <br>
+            ...............</b>
+            
+        </p>
+    </div>
 
   <footer class="footer">
     <div class="footer-content">
