--- a/html/ContactUs.html
+++ b/html/ContactUs.html
@@ -6,21 +6,22 @@
     <title>Contact Us - CakerieCafe Cupcake</title>
     <link rel="stylesheet" href="../css/ContactUs.css"/>
 </head>
-<body class="image">
-    <div class="nav-container">
-        <img src="../assets/transparent-TO-logo.png" class="logo" alt="CakerieCafe Logo">
-        <nav class="list1">
-            <button class="item1"><a href="Home.html" class="h1">Home</a></button>
-            <button class="item1"><a href="About.html" class="h2">About</a></button>
-            <button class="item1"><a href="Occasions.html" class="h3">Occasions</a></button>
-            <button class="item1"><a href="Cupcakes.html" class="h4">Cupcakes</a></button>
-            <button class="item1"><a href="ViewCart.html" class="h5">View Cart</a></button>
-            <button class="item1"><a href="ContactUs.html" class="h6">Contact us</a></button>
-        </nav>
-        <nav class="list2">
-            <button class="item2">Search here</button>
-        </nav>
-    </div>
+<body>
+    <div class="main-content">
+        <div class="nav-container">
+            <img src="../assets/transparent-TO-logo.png" class="logo" alt="CakerieCafe Logo">
+            <nav class="list1">
+                <button class="item1"><a href="Home.html" class="h1">Home</a></button>
+                <button class="item1"><a href="About.html" class="h2">About</a></button>
+                <button class="item1"><a href="Occasions.html" class="h3">Occasions</a></button>
+                <button class="item1"><a href="Cupcakes.html" class="h4">Cupcakes</a></button>
+                <button class="item1"><a href="ViewCart.html" class="h5">View Cart</a></button>
+                <button class="item1"><a href="ContactUs.html" class="h6">Contact us</a></button>
+            </nav>
+            <nav class="list2">
+                <button class="item2">Search here</button>
+            </nav>
+        </div>
 <p align="center" class="topic"><b>CONTACT US</b></p>
 
 
@@ -117,7 +118,8 @@
 
 
 <br><br><br>
-<p>
+    </div>
+
 <footer class="footer">
     <div class="footer-content">
       <div class="footer-section">
