--- a/html/Home.html
+++ b/html/Home.html
@@ -6,28 +6,30 @@
     <title>CakerieCafe Cupcake - Home</title>
     <link rel="stylesheet" href="../css/Homecss.css"/>
 </head>
-<body class="image">
-    <div class="nav-container">
-        <img src="../assets/transparent-TO-logo.png" class="logo" alt="CakerieCafe Logo">
-        <nav class="list1">
-            <button class="item1"><a href="Home.html" class="h1">Home</a></button>
-            <button class="item1"><a href="About.html" class="h2">About</a></button>
-            <button class="item1"><a href="Occasions.html" class="h3">Occasions</a></button>
-            <button class="item1"><a href="Cupcakes.html" class="h4">Cupcakes</a></button>
-            <button class="item1"><a href="ViewCart.html" class="h5">View Cart</a></button>
-            <button class="item1"><a href="ContactUs.html" class="h6">Contact us</a></button>
-        </nav>
-        <nav class="list2">
-            <button class="item2">Search here</button>
-        </nav>
-    </div>
+<body>
+    <div class="main-content">
+        <div class="nav-container">
+            <img src="../assets/transparent-TO-logo.png" class="logo" alt="CakerieCafe Logo">
+            <nav class="list1">
+                <button class="item1"><a href="Home.html" class="h1">Home</a></button>
+                <button class="item1"><a href="About.html" class="h2">About</a></button>
+                <button class="item1"><a href="Occasions.html" class="h3">Occasions</a></button>
+                <button class="item1"><a href="Cupcakes.html" class="h4">Cupcakes</a></button>
+                <button class="item1"><a href="ViewCart.html" class="h5">View Cart</a></button>
+                <button class="item1"><a href="ContactUs.html" class="h6">Contact us</a></button>
+            </nav>
+            <nav class="list2">
+                <button class="item2">Search here</button>
+            </nav>
+        </div>
 
-<div class="content-container">
-    <p align="center" class="topic">CakerieCafe<br>Cupcake</p>
-    <p align="center" class="solgan">- will make your day full of happiness -</p>
-    <p align="center" class="topic1">Thank you for stopping by CakerieCafe<br>Cupcake!</p>
-    <p align="center" class="topic2">We're Canada's and GTA's favourite shop for the special treat.</p>
-</div>
+        <div class="content-container">
+            <p align="center" class="topic">CakerieCafe<br>Cupcake</p>
+            <p align="center" class="solgan">- will make your day full of happiness -</p>
+            <p align="center" class="topic1">Thank you for stopping by CakerieCafe<br>Cupcake!</p>
+            <p align="center" class="topic2">We're Canada's and GTA's favourite shop for the special treat.</p>
+        </div>
+    </div>
 
 <footer class="footer">
     <div class="footer-content">
