Refactor ViewCart.html for improved structure and readability

--- a/html/ViewCart.html
+++ b/html/ViewCart.html
@@ -6,34 +6,36 @@
     <title>View Cart - CakerieCafe Cupcake</title>
     <link rel="stylesheet" href="../css/ViewCartcss.css"/>
 </head>
-<body class="image">
-    <div class="nav-container">
-        <img src="../assets/transparent-TO-logo.png" class="logo" alt="CakerieCafe Logo">
-        <nav class="list1">
-            <button class="item1"><a href="Home.html" class="h1">Home</a></button>
-            <button class="item1"><a href="About.html" class="h2">About</a></button>
-            <button class="item1"><a href="Occasions.html" class="h3">Occasions</a></button>
-            <button class="item1"><a href="Cupcakes.html" class="h4">Cupcakes</a></button>
-            <button class="item1"><a href="ViewCart.html" class="h5">View Cart</a></button>
-            <button class="item1"><a href="ContactUs.html" class="h6">Contact us</a></button>
-        </nav>
-        <nav class="list2">
-            <button class="item2">Search here</button>
-        </nav>
+<body>
+    <div class="main-content">
+        <div class="nav-container">
+            <img src="../assets/transparent-TO-logo.png" class="logo" alt="CakerieCafe Logo">
+            <nav class="list1">
+                <button class="item1"><a href="Home.html" class="h1">Home</a></button>
+                <button class="item1"><a href="About.html" class="h2">About</a></button>
+                <button class="item1"><a href="Occasions.html" class="h3">Occasions</a></button>
+                <button class="item1"><a href="Cupcakes.html" class="h4">Cupcakes</a></button>
+                <button class="item1"><a href="ViewCart.html" class="h5">View Cart</a></button>
+                <button class="item1"><a href="ContactUs.html" class="h6">Contact us</a></button>
+            </nav>
+            <nav class="list2">
+                <button class="item2">Search here</button>
+            </nav>
+        </div>
+    <br>
+    
+    <p class="heading"><b>Your Shopping Cart is Empty</b></p>
+    <input type="button" class="box1" value="Sign in">
+    <p class="heading1"><a href="Cupcakes.html" class="h7"><b><-- Continue Shopping</b></a></p>
+    
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
+    <br><br>
     </div>
-<br>
 
-<p class="heading"><b>Your Shopping Cart is Empty</b></p>
-<input type="button" class="box1" value="Sign in">
-<p class="heading1"><a href="Cupcakes.html" class="h7"><b><-- Continue Shopping</b></a></p>
-
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<br><br>
-<p>
 <footer class="footer">
     <div class="footer-content">
       <div class="footer-section">
