Refactor Cupcakes.html for improved product card structure and styling

--- a/html/Cupcakes.html
+++ b/html/Cupcakes.html
@@ -292,30 +292,26 @@
 
         <p class="description">Toronto Cupcake is bringing together hearts, butterflies and flowers on delicious cupcakes. Hand pressed discs with embossed letters spell out "MOM" on three of the cupcakes. Beautifully boxed and decorated these cupcakes come with an envelope card, and your personal message.</p>
         
-        <div class="holiday-products">
-            <div class="holiday-card">
-                <img src="../assets/M1.png" class="holiday-image" alt="Mother's Day Dozen">
-                <div class="holiday-info">
-                    <h4 class="holiday-title">Mother's Day Dozen</h4>
-                    <p class="holiday-price">$45.00 per dozen</p>
-                    <div class="quantity-section">
-                        <label class="qty-label">QTY</label>
-                        <input type="text" class="qty-input" value="1" maxlength="3">
-                        <button class="add-cart-btn">ADD TO CART</button>
-                    </div>
+        <div class="products-grid">
+            <div class="product-card">
+                <img src="../assets/M1.png" class="product-image" alt="Mother's Day Dozen">
+                <h3 class="product-title">Mother's Day<br>Dozen</h3>
+                <p class="product-price">$45.00 per dozen</p>
+                <div class="quantity-section">
+                    <label class="qty-label">QTY</label>
+                    <input type="text" class="qty-input" value="1" maxlength="3">
+                    <button class="add-cart-btn">ADD TO CART</button>
                 </div>
             </div>
 
-            <div class="holiday-card">
-                <img src="../assets/M2.png" class="holiday-image" alt="Mother's Day Half Dozen">
-                <div class="holiday-info">
-                    <h4 class="holiday-title">Mother's Day Half Dozen</h4>
-                    <p class="holiday-price">$23.50 per dozen</p>
-                    <div class="quantity-section">
-                        <label class="qty-label">QTY</label>
-                        <input type="text" class="qty-input" value="1" maxlength="3">
-                        <button class="add-cart-btn">ADD TO CART</button>
-                    </div>
+            <div class="product-card">
+                <img src="../assets/M2.png" class="product-image" alt="Mother's Day Half Dozen">
+                <h3 class="product-title">Mother's Day<br>Half Dozen</h3>
+                <p class="product-price">$23.50 per half dozen</p>
+                <div class="quantity-section">
+                    <label class="qty-label">QTY</label>
+                    <input type="text" class="qty-input" value="1" maxlength="3">
+                    <button class="add-cart-btn">ADD TO CART</button>
                 </div>
             </div>
         </div>
@@ -324,52 +320,44 @@
         <h2 class="section-heading">Other Holidays</h2>
         <div class="divider"></div>
 
-        <div class="special-products">
-            <div class="special-card">
-                <img src="../assets/V1.png" class="special-image" alt="Valentine's Day">
-                <div class="special-info">
-                    <h4 class="special-title">Valentine's Day</h4>
-                    <div class="quantity-section">
-                        <label class="qty-label">QTY</label>
-                        <input type="text" class="qty-input" value="1" maxlength="3">
-                        <button class="add-cart-btn">ADD TO CART</button>
-                    </div>
+        <div class="products-grid">
+            <div class="product-card">
+                <img src="../assets/V1.png" class="product-image" alt="Valentine's Day">
+                <h3 class="product-title">Valentine's<br>Day</h3>
+                <div class="quantity-section">
+                    <label class="qty-label">QTY</label>
+                    <input type="text" class="qty-input" value="1" maxlength="3">
+                    <button class="add-cart-btn">ADD TO CART</button>
                 </div>
             </div>
 
-            <div class="special-card">
-                <img src="../assets/cc10.png" class="special-image" alt="Easter Day Special">
-                <div class="special-info">
-                    <h4 class="special-title">Easter Day Special</h4>
-                    <div class="quantity-section">
-                        <label class="qty-label">QTY</label>
-                        <input type="text" class="qty-input" value="1" maxlength="3">
-                        <button class="add-cart-btn">ADD TO CART</button>
-                    </div>
+            <div class="product-card">
+                <img src="../assets/cc10.png" class="product-image" alt="Easter Day Special">
+                <h3 class="product-title">Easter Day<br>Special</h3>
+                <div class="quantity-section">
+                    <label class="qty-label">QTY</label>
+                    <input type="text" class="qty-input" value="1" maxlength="3">
+                    <button class="add-cart-btn">ADD TO CART</button>
                 </div>
             </div>
 
-            <div class="special-card">
-                <img src="../assets/cc27.png" class="special-image" alt="Canada Day Special">
-                <div class="special-info">
-                    <h4 class="special-title">Canada Day Special</h4>
-                    <div class="quantity-section">
-                        <label class="qty-label">QTY</label>
-                        <input type="text" class="qty-input" value="1" maxlength="3">
-                        <button class="add-cart-btn">ADD TO CART</button>
-                    </div>
+            <div class="product-card">
+                <img src="../assets/cc27.png" class="product-image" alt="Canada Day Special">
+                <h3 class="product-title">Canada Day<br>Special</h3>
+                <div class="quantity-section">
+                    <label class="qty-label">QTY</label>
+                    <input type="text" class="qty-input" value="1" maxlength="3">
+                    <button class="add-cart-btn">ADD TO CART</button>
                 </div>
             </div>
 
-            <div class="special-card">
-                <img src="../assets/cc20.png" class="special-image" alt="St Patty's Day cupcake">
-                <div class="special-info">
-                    <h4 class="special-title">St Patty's Day cupcake</h4>
-                    <div class="quantity-section">
-                        <label class="qty-label">QTY</label>
-                        <input type="text" class="qty-input" value="1" maxlength="3">
-                        <button class="add-cart-btn">ADD TO CART</button>
-                    </div>
+            <div class="product-card">
+                <img src="../assets/cc20.png" class="product-image" alt="St Patty's Day cupcake">
+                <h3 class="product-title">St Patty's Day<br>cupcake</h3>
+                <div class="quantity-section">
+                    <label class="qty-label">QTY</label>
+                    <input type="text" class="qty-input" value="1" maxlength="3">
+                    <button class="add-cart-btn">ADD TO CART</button>
                 </div>
             </div>
         </div>
@@ -378,28 +366,24 @@
         <h2 class="section-heading">Special Events and Festivals</h2>
         <div class="divider"></div>
 
-        <div class="special-products">
-            <div class="special-card">
-                <img src="../assets/cc13.png" class="special-image" alt="Beaches Jazz Designed cupcake">
-                <div class="special-info">
-                    <h4 class="special-title">Beaches Jazz Designed cupcake</h4>
-                    <div class="quantity-section">
-                        <label class="qty-label">QTY</label>
-                        <input type="text" class="qty-input" value="1" maxlength="3">
-                        <button class="add-cart-btn">ADD TO CART</button>
-                    </div>
+        <div class="products-grid">
+            <div class="product-card">
+                <img src="../assets/cc13.png" class="product-image" alt="Beaches Jazz Designed cupcake">
+                <h3 class="product-title">Beaches Jazz<br>Designed cupcake</h3>
+                <div class="quantity-section">
+                    <label class="qty-label">QTY</label>
+                    <input type="text" class="qty-input" value="1" maxlength="3">
+                    <button class="add-cart-btn">ADD TO CART</button>
                 </div>
             </div>
 
-            <div class="special-card">
-                <img src="../assets/cc12.png" class="special-image" alt="Toronto International Film Festival">
-                <div class="special-info">
-                    <h4 class="special-title">Toronto International Film Festival</h4>
-                    <div class="quantity-section">
-                        <label class="qty-label">QTY</label>
-                        <input type="text" class="qty-input" value="1" maxlength="3">
-                        <button class="add-cart-btn">ADD TO CART</button>
-                    </div>
+            <div class="product-card">
+                <img src="../assets/cc12.png" class="product-image" alt="Toronto International Film Festival">
+                <h3 class="product-title">Toronto International<br>Film Festival</h3>
+                <div class="quantity-section">
+                    <label class="qty-label">QTY</label>
+                    <input type="text" class="qty-input" value="1" maxlength="3">
+                    <button class="add-cart-btn">ADD TO CART</button>
                 </div>
             </div>
         </div>
@@ -408,30 +392,27 @@
         <h2 class="section-heading">Other</h2>
         <div class="divider"></div>
 
-        <div class="special-products">
-            <div class="special-card">
-                <img src="../assets/ccc3.png" class="special-image" alt="Just For Kids cupcake">
-                <div class="special-info">
-                    <h4 class="special-title">Just For Kids cupcake</h4>
-                    <div class="quantity-section">
-                        <label class="qty-label">QTY</label>
-                        <input type="text" class="qty-input" value="1" maxlength="3">
-                        <button class="add-cart-btn">ADD TO CART</button>
-                    </div>
+        <div class="products-grid">
+            <div class="product-card">
+                <img src="../assets/ccc3.png" class="product-image" alt="Just For Kids cupcake">
+                <h3 class="product-title">Just For Kids<br>cupcake</h3>
+                <div class="quantity-section">
+                    <label class="qty-label">QTY</label>
+                    <input type="text" class="qty-input" value="1" maxlength="3">
+                    <button class="add-cart-btn">ADD TO CART</button>
                 </div>
             </div>
 
-            <div class="special-card">
-                <img src="../assets/cc9.png" class="special-image" alt="Birthday cupcake">
-                <div class="special-info">
-                    <h4 class="special-title">Birthday cupcake</h4>
-                    <div class="quantity-section">
-                        <label class="qty-label">QTY</label>
-                        <input type="text" class="qty-input" value="1" maxlength="3">
-                        <button class="add-cart-btn">ADD TO CART</button>
-                    </div>
+            <div class="product-card">
+                <img src="../assets/cc9.png" class="product-image" alt="Birthday cupcake">
+                <h3 class="product-title">Birthday<br>cupcake</h3>
+                <div class="quantity-section">
+                    <label class="qty-label">QTY</label>
+                    <input type="text" class="qty-input" value="1" maxlength="3">
+                    <button class="add-cart-btn">ADD TO CART</button>
                 </div>
             </div>
+        </div>
         </div>
     </div>
     </div>
